UC5 - First node deleted using method